# Cluedo

./: Cluedo.sln
Cluedo/: CMakeLists.txt  main.cpp
Cluedo/GameManager/: CluedoObjectLoader.cpp  CluedoObjectLoader.h  GameController.cpp  GameController.h  GameRunner.cpp  GameRunner.h
Cluedo/Message/: MessageHandler.cpp  MessageHandler.h  MessageIds.h
Cluedo/Model/: CluedoObject.cpp  CluedoObject.h  Murder.cpp  Murder.h  Player.cpp  Player.h  PlayerSet.cpp  PlayerSet.h  RemotePlayer.cpp  RemotePlayer.h  Room.cpp  Room.h  Weapon.cpp  Weapon.h
Cluedo/Network/: TcpWinSocketClient.cpp  TcpWinSocketClient.h  TcpWinSocketServer.cpp  TcpWinSocketServer.h
Cluedo/UI/: AskPlayerUI.cpp  AskPlayerUI.h  AskPlayerUI.ui  CluedoUI.cpp  CluedoUI.h  CluedoUI.ui  ConnectServerUI.cpp  ConnectServerUI.h  ConnectServerUI.ui  PlayerSetUI.cpp  PlayerSetUI.h  PlayerSetUI.ui  SelectObjectToShowUI.cpp  SelectObjectToShowUI.h  SelectObjectToShowUI.ui  SelectObjectsUI.cpp  SelectObjectsUI.h  SelectObjectsUI.ui  StartGameUI.cpp  StartGameUI.h  StartGameUI.ui  WaitRemotePlayerUI.cpp  WaitRemotePlayerUI.h  WaitRemotePlayerUI.ui
Cluedo/Utils/: Utils.cpp  Utils.h
